samples/_failures_safe/1761615957_0ddad4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_debb0466.c:93: error: expected ‘}’ at end of input
./samples/SAFE/__tmp_debb0466.c:92:5: note: to match this ‘{’
   92 |     {STATE_READING_WORD
      |     ^
